--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "cypress": "^13.13.0"
+    "cypress": "^13.13.0",
+    "cypress-mochawesome-reporter": "^3.8.2"
   },
   "dependencies": {
     "chance": "^1.1.11"
